--- a/GTRPhotoLayout/styles.css
+++ b/GTRPhotoLayout/styles.css
@@ -10,7 +10,7 @@ ul {
 }
 
 li {
-  height: 50vh;
+  height: 40vh;
   flex-grow: 1;
   list-style-type: none;
   margin: 0.1rem;
@@ -24,4 +24,28 @@ img {
   max-height: 100%;
   min-width: 100%;
   object-fit: cover;
+}
+
+@media (max-height: 480px) {
+  li {
+    height: 80vh;
+  }
+}
+
+@media (max-aspect-ratio: 1/1) and (max-width: 480px) {
+  ul {
+    flex-direction: row;
+  }
+
+  li {
+    height: auto;
+    width: 100%;
+  }
+
+  img {
+    width: 100%;
+    max-height: 75vh;
+    min-width: 0;
+  }
+  
 }
